Implementing ContactInfo component to Contact page

--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -17,7 +17,7 @@
       },
       {
         "title": "Contact",
-        "link": "#contact"
+        "link": "/pages/contact"
       }
     ]
   },
