--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -17,7 +17,7 @@
       },
       {
         "title": "Contato",
-        "link": "#contact"
+        "link": "/pages/contact"
       }
     ]
   },
