--- a/app/data/locales/es-ES.json
+++ b/app/data/locales/es-ES.json
@@ -17,7 +17,7 @@
       },
       {
         "title": "Contacto",
-        "link": "#contact"
+        "link": "/pages/contact"
       }
     ]
   },
