Implementing useFilteredProducts hook, prepareProductData util and refactoring Products page

--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -883,7 +883,8 @@
         "badges": [],
         "link": "/pages/products/7"
       }
-    ]
+    ],
+    "productsNotFound": "Nenhum produto encontrado"
   },
   "faqs": [
     {
