Implementing useProductState hook, ProductInfo component and refactoring Product page

--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -886,6 +886,12 @@
     ],
     "productsNotFound": "Nenhum produto encontrado"
   },
+  "productPage": {
+    "productNotFound": "Produto não encontrado",
+    "quantityLabel": "Quantidade",
+    "addToCartButton": "Adicionar ao Carrinho",
+    "addToFavoriteButton": "Adicionar aos Favoritos"
+  },
   "faqs": [
     {
       "question": "Quais são os horários de funcionamento da loja?",
